# kiwi-cook

./: .dccache  .deepsource.toml  .gitignore  .gitmodules  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  main.go  recipe.go
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/workflows/: client-build.yml  deploy.yml  docker-build.yml  go-build.yml  go-docker-image.yml  go-static-analysis.yml  go.yml  node-build-and-deploy.js.yml  node-build.js.yml  node.js.yml  qodana.yml  server-prod-build.yml  server-prod-static-analysis.yml  staticcheck.yml  test-build-flutter-client.yml  test-client-build.yml
backend/: .env  .gitignore  Discovery.md  Dockerfile  auth.go  database.go  discounts.go  docker-compose.yml  edeka.go  general.go  go.mod  go.sum  item.go  jwtRS256.key.pub  limit.go  log.go  main.go  market.go  mongo.go  parse.go  parser.go  public.key  recipe.go  recipe_test.go  recommendation.go  rewe.go  root.go  search.go  serve.go  server.go  status.go  suggest.go  tastebuddy.go  user.go  utility.go
backend/.data/: items.json  recipes.json
backend/.page/: editor.html
backend/data/: recipes.json
backend/docker/: docker-compose.yml
backend/json/: items.json
client/: .browserslistrc  .eslintrc.js  babel.config.js  bun.lockb  capacitor.config.json  package-lock.json  package.json  project-summary.md  tsconfig.json  tsconfig.tsbuildinfo  vue.config.js
client/android/: capacitor.settings.gradle
client/assets/: .gitignore
client/src/: main.ts  (+2 more)
client_flutter/: README.md
flutter_client/: pubspec.yaml
frontend/: .eslintrc.js  README.md  bun.lockb  capacitor.config.json  ionic.config.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vue.config.js
kiwi_cook/: .eslintignore  .eslintrc.cjs  .npmrc  README.md  bun.lockb  eslint.config.js  index.html  package.json  quasar.config.ts
kiwi_cook_server/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
kiwi_cook_server/api/: app.py  security.py
kiwi_cook_server/api/internal/: recipes.py
kiwi_cook_server/api/routers/: chatgpt.py  recipe.py  user.py
kiwi_cook_server/data/: urls.txt
kiwi_cook_server/lib/: auth.py  logging.py  parse.py  password.py  token.py  utils.py  weekplan.py
kiwi_cook_server/lib/chatgpt/: ingredients.py  weekplan.py
kiwi_cook_server/lib/database/: mongodb.py  redis.py
kiwi_cook_server/lib/pipeline/recipe/: __init__.py  crawl.py  load_html.py  load_json.py  parse.py  parse_recipe_allrecipes_json.py  parse_recipe_html.py  pipeline.py  process_html.py  translate.py
kiwi_cook_server/lib/scraper/: scraper.py  utils.py
kiwi_cook_server/lib/shop/: rewe.py
kiwi_cook_server/lib/telemetry/: exporter.py
kiwi_cook_server/models/: chat.py  mongo.py  recipe.py  shared.py  user.py
kiwi_cook_server/server/: app.py  security.py
kiwi_cook_server/server/internal/: recipes.py
kiwi_cook_server/server/routers/: chatgpt.py  recipe.py
kiwi_cook_server/server/routers/user/: chat.py  user.py
project_kiwi/: .eslintrc.cjs  README.md  bun.lockb  package.json  quasar.config.ts
scripts/: README.md  start-dev.bat  start-dev.sh  start-docker.sh  stop-docker.sh
server/: .env  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  item.go  log.go  main.py  mongodb.py  pyproject.toml  recipe.go  recipes.txt  requirements.txt  user.go
server-dev/: .gitignore  mongodb.py  requirements.txt  scraper.py  server.py
server-prod/: .env  Discovery.md  auth.go  database.go  go.mod  go.sum  item.go  log.go  recipe.go  root.go  serve.go  server.go  status.go  tastebuddy.go  utility.go
taste-buddy-flutter-client/: pubspec.yaml
taste-buddy-ionic-client/: .stylelintrc.json  README.md
taste_buddy/: README.md  pubspec.yaml
taste_buddy_ionic/: package.json  tsconfig.tsbuildinfo
taste_buddy_server/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  recipes.txt  requirements.txt
taste_buddy_server/chatgpt/: ingredients.py  weekplan.py
taste_buddy_server/lib/: auth.py  parse.py  robots.py  utils.py  weekplan.py
taste_buddy_server/lib/database/: mongodb.py
taste_buddy_server/lib/pipeline/recipe/: crawl.py  download.py
taste_buddy_server/models/: chat.py  recipe.py  user.py
taste_buddy_server/pipeline/: crawl.py  download.py  parse.py  pipeline.py  recipe_pipeline.py
taste_buddy_server/pipeline/recipe/: __init__.py  crawl.py  download.py  parse.py
taste_buddy_server/server/: app.py  limit.py
taste_buddy_server/server/internal/: recipes.py
taste_buddy_server/server/routers/: chatgpt.py  ingredient.py  recipe.py  user.py  users.py
(+661 files in other folders)
